[package]
name = "perspective-rust-axum-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
perspective = { version = "3.0.0-rc.1" }
axum = { version = "=0.7.4", features = ["ws"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
